<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.siplo.banking.bankdepositapp.cashDepositActivity"
    tools:showIn="@layout/activity_cash_deposit">
    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout

        android:id="@+id/deposit_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
     <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/accountNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_account_no"
        android:imeActionId="@+id/accountNo"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="8"
        android:singleLine="true" />

     </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/bankCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_bank_code"
                android:imeActionId="@+id/bankCode"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="8"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nic"
                android:imeActionId="@+id/nic"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="10"
                android:singleLine="true" />

</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_amount"
            android:imeActionId="@+id/amount"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="numberDecimal"
            android:maxLines="1"

            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_mobile"
                android:imeActionId="@+id/mobile"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="10"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>





        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/narr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_narr"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:lines="3"
                android:minLines="1"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/refNo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proceed_button_text"
            android:id="@+id/button"
            android:textColor="#ffffff"
            android:onClick="proceedCashDeposit"
            android:background="@drawable/button"
            android:layout_below="@+id/fab"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </LinearLayout>
</ScrollView>

</RelativeLayout>
